--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db": "echo \"Available database commands:\" && echo \"  npm run db:init  - Initialize database schema\" && echo \"  npm run db:reset - Reset database (drop & recreate)\" && echo \"  npm run db:seed  - Seed database with test data\"",
+    "db:init": "node db/init.js init",
+    "db:reset": "node db/init.js reset",
+    "db:seed": "node db/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
