--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db": "echo \"Available database commands:\" && echo \"  npm run db:init  - Initialize database schema\" && echo \"  npm run db:reset - Reset database (drop & recreate)\" && echo \"  npm run db:seed  - Seed database with test data\"",
+    "db": "echo \"Available database commands:\" && echo \"  npm run db:init  - Initialize database schema\" && echo \"  npm run db:reset - Reset database (drop & recreate)\" && echo \"  npm run db:seed  - Seed database with test data\" && echo \"  npm run db:migrate - Run database migrations\"",
     "db:init": "node db/init.js init",
     "db:reset": "node db/init.js reset",
-    "db:seed": "node db/seed.js"
+    "db:seed": "node db/seed.js",
+    "db:migrate": "node db/migrate.js"
   },
   "keywords": [],
   "author": "",
